--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 songs/
-ani/
-cover1/
-cover4/
-cover6/
-download/
-logo/
-raghuvaran/
+ani.jpg
+cover1.jpg
+cover4.jpg
+cover6.jpg
+download.png
+logo.png
+raghuvaran.jpg
